# agent-island

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: agent-island-spec.md  session-hook-display-mapping.md
scripts/: agentisland-bridge  simulate-events.ts  verify-claude-hook.ts
src/: App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: inject.rs  ipc.rs  launcher.rs  lib.rs  main.rs  notify.rs  permission.rs  session.rs  settings.rs
src/components/: AgentAvatar.tsx  Capsule.test.tsx  Capsule.tsx  LogCenter.test.tsx  LogCenter.tsx  PermissionCard.tsx  SessionRow.test.tsx  SessionRow.tsx  SessionStatusSprite.tsx  Settings.test.tsx  Settings.tsx
src/lib/: tauri.ts
src/store/: sessions.ts
src/types/: agent.ts
